--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,12 +25,8 @@ classifiers = [
 ]
 
 dependencies = [
-    "pyotp>=2.9.0",
-    "cryptography>=41.0.0",
     "pydantic>=2.0.0",
-    "httpx>=0.25.0",
-    "python-telegram-bot>=20.0",
-    "aiosqlite>=0.19.0",
+    "aiohttp>=3.9.0",
     "typer>=0.9.0",
     "rich>=13.0.0",
     "pyyaml>=6.0",
