docs: Add example config, update README with quick start
- Add config.example.yaml with documented settings
- Update .gitignore to exclude config.yaml but keep example
- Rewrite Quick Start with actual working commands
- 53 tests passing

--- a/.gitignore
+++ b/.gitignore
@@ -49,8 +49,10 @@ secrets/
 *.age
 secrets.json
 
-# Local config
+# Local config (keep config.example.yaml, ignore actual configs)
 config.local.yaml
+config.yaml
+!config.example.yaml
 
 # Logs
 *.log
