--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,10 @@ dependencies = [
     "typer>=0.9.0",
     "rich>=13.0.0",
     "pyyaml>=6.0",
+    "mcp>=1.0.0",
+    "google-api-python-client>=2.0.0",
+    "google-auth-httplib2>=0.1.0",
+    "google-auth-oauthlib>=1.0.0",
 ]
 
 [project.optional-dependencies]
@@ -43,6 +47,7 @@ dev = [
 
 [project.scripts]
 airlock = "airlock.cli:app"
+airlock-mcp = "airlock.mcp_server:main"
 
 [project.urls]
 Homepage = "https://github.com/ErikCohenDev/airlock"
