security: passphrase-based encryption + secrets daemon
Breaking change: Secrets now require passphrase (not TOTP secret file)

Security improvements:
- Encryption key derived from passphrase (never stored on disk)
- Secrets daemon holds key in memory after unlock
- TOTP verification required for each secret access
- Passphrase entered via terminal only (never over chat)
- Migration command for existing secrets (airlock credentials migrate)

New commands:
- airlock unlock: Start daemon + enter passphrase
- airlock lock: Clear key from memory

Flow:
1. User runs 'airlock unlock' in terminal (passphrase stays local)
2. Daemon holds decryption key in memory (8hr timeout)
3. Agent requests secret with context
4. User provides TOTP code (ephemeral, 30s)
5. Daemon verifies TOTP + returns secret

Also:
- Updated .gitignore to exclude sensitive files
- Removed mcp-config.json from tracking (local paths)

--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,14 @@ logs/
 # OS
 .DS_Store
 Thumbs.db
+
+# Airlock sensitive data (never commit)
+*.enc
+*.salt
+totp_secret
+calendar_token.json
+calendar_credentials.json
+token_cache.json
+
+# Local MCP config (contains machine-specific paths)
+mcp-config.json
